--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.1.3",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
+    "babel-plugin-import": "^1.6.3",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
@@ -34,6 +36,7 @@
     "promise": "8.0.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-app-rewired": "^1.4.0",
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
@@ -44,8 +47,8 @@
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1",
+    "webpack": "^3.5.1",
+    "webpack-dev-server": "^2.7.1",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
@@ -98,5 +101,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy":"http://localhost:9000"
+  "proxy": "http://localhost:9000"
 }
