--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-plugin-import": "^1.6.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -17,6 +18,8 @@
     "classnames": "^2.2.5",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
+    "draft-js": "^0.11.1",
+    "draftjs-to-html": "^0.8.4",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.0",
     "eslint-loader": "1.9.0",
